# Gradius

./: CMakeLists.txt  Player.cpp  Player.h  Read Me.txt  Singleton.h  main.cpp  run.sh
Controller/: CMakeLists.txt  Controller.cpp  Controller.h  Stopwatch.cpp  Stopwatch.h
Levels/: Level 1.json  Level 2.json  Level Test.json  Test Level.json
Model/: AIFollower.cpp  AIFollower.h  AIShip.cpp  AIShip.h  AIShooter.cpp  AIShooter.h  Border.cpp  Border.h  Bullet.cpp  Bullet.h  CMakeLists.txt  Entity.cpp  Entity.h  Model.cpp  Model.h  MovingEntity.cpp  MovingEntity.h  Obstacle.cpp  Obstacle.h  PlayerShip.cpp  PlayerShip.h  ScrollingEntity.cpp  ScrollingEntity.h  Ship.cpp  Ship.h  StaticEntity.cpp  StaticEntity.h  Subject.cpp  Subject.h  Timestamp.cpp  Timestamp.h  World.cpp  World.h
ObserverPattern/: Event.h  Observer.cpp  Observer.h  Subject.cpp  Subject.h
ObserverPattern/Events/: AddedEntity.cpp  AddedEntity.h  Destroyed.cpp  Destroyed.h  Event.cpp  Event.h  Shot.cpp  Shot.h  UpdateX.cpp  UpdateX.h  UpdateY.cpp  UpdateY.h
View/: Animation.cpp  Animation.h  CMakeLists.txt  Entity.cpp  Entity.h  Observer.cpp  Observer.h  Player.cpp  Player.h  Stopwatch.cpp  Stopwatch.h  Transformation.cpp  Transformation.h  View.cpp  View.h  ViewEntity.cpp  ViewEntity.h
